--- a/public/styles/dataTable.css
+++ b/public/styles/dataTable.css
@@ -80,6 +80,12 @@
         border-radius: 0.25rem;
         width: 100%;
     }
+    @media only screen  and (min-width: 725px) and (max-width: 991px){
+        /* For mobile phones: */
+        #mainTable_wrapper{
+            width: auto;
+        }
+    }
     #mainTable_length, #mainTable_info{
         margin-left: 15px;
     }
