--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -11,28 +11,58 @@
             }
         },
     })%>
-    <div class="d-flex gap-4 "> 
-        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-             <div class="d-flex flex-column justify-content-around">
-                <p>Employees</p>
-                <p style="font-size:1.5rem;"><b><%=(data.summaryData) ? data.summaryData[0].totalEmployees : '0'%></b></p>
-             </div>
-             <div class="d-flex">
-                <p></p>
-                <p class="mt-auto p-2 bd-highlight">Totals</p>
-             </div>
-        </div>
-        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-             <div class="d-flex flex-column justify-content-around">
-                <p>Payroll Groups</p>
-                <p style="font-size:1.5rem;"><b><%=(data.summaryData) ? data.summaryData[0].totalPayrollGroups : '0'%></b></p>
-             </div>
-             <div class="d-flex">
-                <p></p>
-                <p class="mt-auto p-2 bd-highlight">Totals</p>
-             </div>
-        </div>
-      </div>
+    <div>
+        <section id="minimal-statistics">
+            <div class="row">
+              <div class="col-12">
+                <h4 class="text-uppercase">MANAGE EMPLOYEE</h4>
+                <p>Employee Summary, Tools, and Redirects</p>
+              </div>
+            </div>
+            <div class="d-flex flex-column">
+              <div class="row card-con">
+                <div class="col-xl-6 col-lg-6" style="gap: 1.5em;">
+                  <div class="card card-stats mb-xl-0">
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="col">
+                          <h5 class="card-title text-uppercase text-muted mb-0">Total Employee</h5>
+                          <span class="h2 font-weight-bold mb-0"><%=(data.summaryData) ? data.summaryData[0].totalEmployees : '0'%></span>
+                        </div>
+                        <div class="col-auto">
+
+                        </div>
+                      </div>
+                      <p class="mt-3 mb-0 text-muted text-sm">
+                        <a href="/admin/employees"><span class="text-nowrap">View Details</span></a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xl-6 col-lg-6" style="gap: 1.5em;">
+                    <div class="card card-stats mb-xl-0">
+                      <div class="card-body">
+                        <div class="row">
+                          <div class="col">
+                            <h5 class="card-title text-uppercase text-muted mb-0">Payroll Groups</h5>
+                            <span class="h2 font-weight-bold mb-0"><%=(data.summaryData) ? data.summaryData[0].totalPayrollGroups : '0'%></span>
+                          </div>
+                          <div class="col-auto">
+  
+                          </div>
+                        </div>
+                        <p class="mt-3 mb-0 text-muted text-sm">
+                          <a href="/admin/employees"><span class="text-nowrap">View Details</span></a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
+            </div>
+            
+            </div>
+          </section>
+    </div>
     
     <div class="d-flex filterContainer rounded-1 gap-3">
         <a id="btnAdd" href="/admin/employees/new" class="btn btn-primary">Add New Employee</a>
@@ -46,87 +76,90 @@
                 }
             },
         })%>
-    <div class="d-flex  table-container"> 
-        <style>
-            tr td:first-child:hover{
-                cursor: pointer;
-            }
-            tr td input[type=checkbox]{
-                margin-right: 10px;
-                background-color: #656488;
-            }
-           
-        </style>
-           
-        <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
-            <thead>
-                <tr>
-                    <th>Employee ID</th>
-                    <th>Employee</th>
-                    <th>Payroll Group</th>
-                    <th>Designation</th>
-                    <th>Type</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <%if(data.result){%>
-                    <%Object.values(data.result).forEach(user=>{%>
+        <div>
+            <div class="d-flex  table-container table-responsive"> 
+                <style>
+                    tr td:first-child:hover{
+                        cursor: pointer;
+                    }
+                    tr td input[type=checkbox]{
+                        margin-right: 10px;
+                        background-color: #656488;
+                    }
+                   
+                </style>
+                   
+                <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
+                    <thead>
                         <tr>
-                            <td><input type="checkbox" name="id" value="<%=user.id%>"><%=user.id%></td>
-                            <td><%=user.name%></td>
-                            <td>
-                                <%if(user.employee_details.employment_information.payroll_type === null){%>
-                                    <a href="#"> Add </a>
-                                <%}else{%>
-                                    <%=user.employee_details.employment_information.payroll_type.fund_cluster%>
-                                    - <%=user.employee_details.employment_information.payroll_type.project_name%> <%=(user.employee_details.employment_information.payroll_type.program_name) ? +  '/ ' + user.employee_details.employment_information.payroll_type.program_name : ''%> 
-                                    <a href="#"> Edit </a>
-                                <%}%>    
-                            </td>
-                            <td><%=user.designation%></td>
-                            <td><%=user.employment_type%></td>
-                            <td>
-                                <a href="/admin/employees/view/<%=user._id%>" target="_blank">View Details</a>
-                                <a href="/admin/employees/edit/<%=user._id%>" target="_blank">Edit</a>
-                            </td>
+                            <th>Employee ID</th>
+                            <th>Employee</th>
+                            <th>Payroll Group</th>
+                            <th>Designation</th>
+                            <th>Type</th>
+                            <th>Action</th>
                         </tr>
-                    <%}); %>
-                <%}%>
-                
-                <script>
-                    const btnAddPayrollType1 = document.querySelector('#btnAdd_payrollType')
-                    btnAddPayrollType1.style.visibility = 'hidden'
-            
-                    // if any of the checkbox is checked, btnAddPayrollType will be visible
-                    const checkboxes = document.querySelectorAll('input[type=checkbox]')
-                    checkboxes.forEach(checkbox=>{
-                        // checkbox.addEventListener('click',()=>{
-                        //     console.log('clicked')
-                        //     btnAddPayrollType.style.visibility = 'visible'
-                        // })
-                        checkbox.addEventListener('change', ()=>{
-                            let isChecked = false;
-                            checkboxes.forEach(checkbox => {
-                              if (checkbox.checked) {
-                                isChecked = true;
-                              }
-                            });
-                            
-                            // Enable or disable button based on checkbox state
-                            if (isChecked) {
-                                btnAddPayrollType1.style.visibility = 'visible'
-                            } else {
-                                btnAddPayrollType1.style.visibility = 'hidden'
-                            }
-                        })
-                    })
-                </script>
-            </tbody>
-            <tfoot>
-            </tfoot>
-        </table>
-    </div>
+                    </thead>
+                    <tbody>
+                        <%if(data.result){%>
+                            <%Object.values(data.result).forEach(user=>{%>
+                                <tr>
+                                    <td><input type="checkbox" name="id" value="<%=user.id%>"><%=user.id%></td>
+                                    <td><%=user.name%></td>
+                                    <td>
+                                        <%if(user.employee_details.employment_information.payroll_type === null){%>
+                                            <a href="#"> Add </a>
+                                        <%}else{%>
+                                            <%=user.employee_details.employment_information.payroll_type.fund_cluster%>
+                                            - <%=user.employee_details.employment_information.payroll_type.project_name%> <%=(user.employee_details.employment_information.payroll_type.program_name) ? +  '/ ' + user.employee_details.employment_information.payroll_type.program_name : ''%> 
+                                            <a href="#"> Edit </a>
+                                        <%}%>    
+                                    </td>
+                                    <td><%=user.designation%></td>
+                                    <td><%=user.employment_type%></td>
+                                    <td>
+                                        <a href="/admin/employees/view/<%=user._id%>" target="_blank">View Details</a>
+                                        <a href="/admin/employees/edit/<%=user._id%>" target="_blank">Edit</a>
+                                    </td>
+                                </tr>
+                            <%}); %>
+                        <%}%>
+                        
+                        <script>
+                            const btnAddPayrollType1 = document.querySelector('#btnAdd_payrollType')
+                            btnAddPayrollType1.style.visibility = 'hidden'
+                    
+                            // if any of the checkbox is checked, btnAddPayrollType will be visible
+                            const checkboxes = document.querySelectorAll('input[type=checkbox]')
+                            checkboxes.forEach(checkbox=>{
+                                // checkbox.addEventListener('click',()=>{
+                                //     console.log('clicked')
+                                //     btnAddPayrollType.style.visibility = 'visible'
+                                // })
+                                checkbox.addEventListener('change', ()=>{
+                                    let isChecked = false;
+                                    checkboxes.forEach(checkbox => {
+                                      if (checkbox.checked) {
+                                        isChecked = true;
+                                      }
+                                    });
+                                    
+                                    // Enable or disable button based on checkbox state
+                                    if (isChecked) {
+                                        btnAddPayrollType1.style.visibility = 'visible'
+                                    } else {
+                                        btnAddPayrollType1.style.visibility = 'hidden'
+                                    }
+                                })
+                            })
+                        </script>
+                    </tbody>
+                    <tfoot>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+    
     
 </div>
 
