--- a/views/Payslip.ejs
+++ b/views/Payslip.ejs
@@ -27,7 +27,7 @@
         <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
             <div class="d-flex flex-column justify-content-around">
                <p>Payslips  </p>
-               <p style="font-size:1.5rem;"><b><%=(data.summaryData[0]) ? data.summaryData[0].total_payroll : '' %></b></p>
+               <p style="font-size:1.5rem;"><b><%=(data.summaryData[0]) ? data.summaryData[0].total_payroll : 0.00 %></b></p>
             </div>
             <div class="d-flex">
                <p></p>
@@ -37,7 +37,7 @@
        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
             <div class="d-flex flex-column justify-content-around">
                <p>Gross Amount Earned</p>
-               <p style="font-size:1.5rem;"><b>₱<%=(data.summaryData[0]) ? data.summaryData[0].total_grosspay : '' %></b></p>
+               <p style="font-size:1.5rem;"><b>₱<%=(data.summaryData[0]) ? data.summaryData[0].total_grosspay : 0.00 %></b></p>
             </div>
             <div class="d-flex">
                <p></p>
@@ -47,7 +47,7 @@
        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
             <div class="d-flex flex-column justify-content-around">
                <p>Net Amount Due</p>
-               <p style="font-size:1.5rem;"><b>₱<%=(data.summaryData[0]) ? data.summaryData[0].total_netpay : '' %></b></p>
+               <p style="font-size:1.5rem;"><b>₱<%=(data.summaryData[0]) ? data.summaryData[0].total_netpay : 0.00 %></b></p>
             </div>
             <div class="d-flex">
                <p></p>
@@ -91,7 +91,8 @@
         }
       },
     })%>
-    <div class="d-flex table-container"> 
+    <div>
+    <div class="d-flex table-container table-responsive"> 
     
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
             <thead>
@@ -115,7 +116,6 @@
                       <td><%=user.salaries.net_salary%></td>
                       <td >
                           <a href="/admin/payroll/<%=user.emp_code%>/payslip?from=<%=query.from%>&to=<%=query.to%>">Payslip</a>
-                          <a href="/admin/payroll/receipt?from=<%=query.from%>&to=<%=query.to%>&p_group=<%=user.payroll_group._id%>">Payroll</a>
                       </td>
                   </tr>
                   <%}); %>
@@ -125,6 +125,7 @@
             </tfoot>
         </table>
     </div>
+  </div>
 </div>
 
 
