--- a/views/allLeave.ejs
+++ b/views/allLeave.ejs
@@ -104,7 +104,7 @@
         </form>
     </div>
 
-    <div class="d-flex  table-container"> 
+    <div class="d-flex  table-container table-responsive"> 
     
         <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
             <thead>
