--- a/views/attendancePerEmployee.ejs
+++ b/views/attendancePerEmployee.ejs
@@ -18,58 +18,38 @@
         },
     })%>
 
-    <div class="d-flex gap-4 "> 
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-           <div class="d-flex flex-column justify-content-around">
-              <p>Monthly Salary</p>
-              <p style="font-size:1.5rem;"><b>P</b></p>
-           </div>
-           <div class="d-flex">
-              <p></p>
-              <p class="mt-auto p-2 bd-highlight">Totals</p>
-           </div>
-      </div>
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-           <div class="d-flex flex-column justify-content-around">
-              <p>Semi-Monthly Salary</p>
-              <p style="font-size:1.5rem;"><b>P</b></p>
-           </div>
-           <div class="d-flex">
-              <p></p>
-              <p class="mt-auto p-2 bd-highlight">Totals</p>
-           </div>
-      </div>
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-        <div class="d-flex flex-column justify-content-around">
-           <p>Deduction</p>
-           <p style="font-size:1.5rem;"><b>P</b></p>
-        </div>
-        <div class="d-flex">
-           <p></p>
-           <p class="mt-auto p-2 bd-highlight">Totals</p>
-        </div>
-   </div>
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-           <div class="d-flex flex-column justify-content-around">
-              <p>Gross Pay</p>
-              <p style="font-size:1.5rem;"><b>P</b></p>
-           </div>
-           <div class="d-flex">
-              <p></p>
-              <p class="mt-auto p-2 bd-highlight">Totals</p>
-           </div>
-      </div>
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-           <div class="d-flex flex-column justify-content-around">
-              <p>Net Pay</p>
-              <p style="font-size:1.5rem;"><b></b></p>
-           </div>
-           <div class="d-flex">
-              <p></p>
-              <p class="mt-auto p-2 bd-highlight">Totals</p>
-           </div>
-      </div>
-    </div>
+    <div>
+      <section id="minimal-statistics">
+          <div class="row">
+            <div class="col-12">
+              <h4 class="text-uppercase">MANAGE EMPLOYEE</h4>
+              <p>Employee Summary, Tools, and Redirects</p>
+            </div>
+          </div>
+          <div class="d-flex flex-column">
+            <div class="row card-con">
+              <div class="col-xl-12" style="gap: 1.5em;">
+                <div class="card card-stats mb-xl-0">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Total DTR</h5>
+                        <span class="h2 font-weight-bold mb-0"><%=(data.summaryData) ? data.summaryData.totalDTRPerEmployee : '0'%></span>
+                      </div>
+                      <div class="col-auto">
+
+                      </div>
+                    </div>
+                    <p class="mt-3 mb-0 text-muted text-sm">
+                      <a href="/admin/employees"><span class="text-nowrap">View Details</span></a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          </div>
+        </section>
+  </div>
     
     <%-include('partials/Modal') %> 
     <div class="d-flex filterContainer rounded-1 gap-3">
@@ -105,35 +85,37 @@
             },
         },
     })%>
-    <div class="d-flex table-container"> 
-        
-        <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>No. of Attendances</th>
-                    <th>DTR Period</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-              <%if(data.result){%>
-                <% Object.values(data.result).forEach(attendance =>{%> 
+    <div>
+      <div class="d-flex table-container table-responsive"> 
+          
+          <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
+              <thead>
                   <tr>
-                    <td><%=attendance.name%></td>
-                    <td><%=attendance.attendance%></td>
-                    <td><%=moment(attendance.date.from).format('MMMM')%> <%=moment(new Date(attendance.date.to)).date()%>-<%=(moment(attendance.date.to).format('MMMM') === moment(attendance.date.from).format('MMMM')) ? moment(new Date(attendance.date.from)).date() : moment(attendance.date.to).format('MMMM') + " " +  moment(attendance.date.to).date()%> <%=moment(attendance.date.to).year()%></td>
-                    <td>
-                      <a href="/admin/attendance/<%=attendance._id%>/dtr?from=<%=query.from%>&to=<%=query.to%>">Print</a>
-                    </td>
+                      <th>Name</th>
+                      <th>No. of Attendances</th>
+                      <th>DTR Period</th>
+                      <th></th>
                   </tr>
-                  <%}); %>
-              <%}%>
-            </tbody>
-            <tfoot>
-            </tfoot>
-        </table>
-    </div>
+              </thead>
+              <tbody>
+                <%if(data.result){%>
+                  <% Object.values(data.result).forEach(attendance =>{%> 
+                    <tr>
+                      <td><%=attendance.name%></td>
+                      <td><%=attendance.attendance%></td>
+                      <td><%=moment(attendance.date.from).format('MMMM')%> <%=moment(new Date(attendance.date.from)).date()%>-<%=(moment(attendance.date.to).format('MMMM') === moment(attendance.date.from).format('MMMM')) ? moment(new Date(attendance.date.to)).date() : moment(attendance.date.to).format('MMMM') + " " +  moment(attendance.date.to).date()%> <%=moment(attendance.date.to).year()%></td>
+                      <td>
+                        <a href="/admin/attendance/<%=attendance._id%>/dtr?from=<%=query.from%>&to=<%=query.to%>">Print</a>
+                      </td>
+                    </tr>
+                    <%}); %>
+                <%}%>
+              </tbody>
+              <tfoot>
+              </tfoot>
+          </table>
+      </div>
+  </div>
 </div>
 
 
