--- a/views/deductions.ejs
+++ b/views/deductions.ejs
@@ -66,36 +66,38 @@
             }
         },
     })%> 
-    <div class="d-flex overflow-auto gap-4 justify-content-between">
-
-        <div class="overflow-auto  table-container" style="width:100%;  "> 
-        
-            <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
-                <thead>
-                    <tr>
-                        <th>Deduction</th>
-                        <th>Amount</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% Object.values(data.result).forEach(deduction =>{%> 
-                        <tr>
-                            <td><%=deduction.name%></td>
-                            <td>P<%=deduction.amount%></td>
-                            <td>
-                                <a id="aEdit" href="#" data-toggle="modal" data-target="#modal"  onclick="editModal('<%=deduction._id%>','<%=deduction.name%>', 'name amount', `<%=include('partials/bodies/Deductions-editbody', {deduction})%>`)"> Edit </a>
-                                <a id="aDelete" href="#" data-toggle="modal" data-target="#modal"  onclick="deleteModal('<%=deduction._id%>')"> Delete </a>
-                            </td>
-                        </tr>
-                    <%}); %>
-                </tbody>
-                <tfoot>
-                </tfoot>
-            </table>
-        </div>
-        <div class="sideContainer rounded-1">
-            <div class="overflow-auto" > 
+    <div class="row">
+        <section class="col-lg-8 connectedSortable ui-sortable" style="margin-bottom: 1.5em;">
+            <div>
+                <div class="overflow-auto  table-container table-responsive"> 
+                    <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
+                        <thead>
+                            <tr>
+                                <th>Deduction</th>
+                                <th>Amount</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% Object.values(data.result).forEach(deduction =>{%> 
+                                <tr>
+                                    <td><%=deduction.name%></td>
+                                    <td>P<%=deduction.amount%></td>
+                                    <td>
+                                        <a id="aEdit" href="#" data-toggle="modal" data-target="#modal"  onclick="editModal('<%=deduction._id%>','<%=deduction.name%>', 'name amount', `<%=include('partials/bodies/Deductions-editbody', {deduction})%>`)"> Edit </a>
+                                        <a id="aDelete" href="#" data-toggle="modal" data-target="#modal"  onclick="deleteModal('<%=deduction._id%>')"> Delete </a>
+                                    </td>
+                                </tr>
+                            <%}); %>
+                        </tbody>
+                        <tfoot>
+                        </tfoot>
+                    </table>
+                </div>
+            </div>
+        </section>
+        <section class="col-lg-4 connectedSortable ui-sortable">
+            <div class="overflow-auto sideContainer rounded-1" > 
                 <form action="" id='asideForm'class="d-flex flex-column gap-2">
                     <h1>Add Deductions</h1>
                     <div class="mb-0">
@@ -112,8 +114,7 @@
                     <button type="submit" class="btn btn-primary sideContainerButton">Add New</button>
                 </form>
             </div>
-        </div>
-        
+        </section>
     </div>
 </div>
 
