--- a/views/holidays.ejs
+++ b/views/holidays.ejs
@@ -49,10 +49,10 @@
         },
     })%>
 
-    <div class="d-flex overflow-auto gap-4 justify-content-between">
-
-        <div class="overflow-auto  table-container" style="width:100%;  "> 
-        
+    <div class="row">
+        <section class="col-lg-8 connectedSortable ui-sortable" style="margin-bottom: 1.5em;">
+        <div class="overflow-auto  table-container table-responsive"> 
+        <div>
             <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
                 <thead>
                     <tr>
@@ -81,8 +81,10 @@
                 </tfoot>
             </table>
         </div>
-        <div class="sideContainer rounded-1">
-            <div class="overflow-auto" > 
+    </div>
+</section>
+<section class="col-lg-4 connectedSortable ui-sortable">
+            <div class="overflow-auto sideContainer rounded-1" > 
                 <form action="" id="asideForm" class="d-flex flex-column gap-2">
                     <h1>Add Holiday</h1>
                     <div class="mb-0">
@@ -105,9 +107,8 @@
                     <button type="submit" class="btn btn-primary sideContainerButton">Add New</button>
                 </form>
             </div>
-        </div>
-        
     </div>
+</section>
     
 </div>
 
