--- a/views/payrollGroups.ejs
+++ b/views/payrollGroups.ejs
@@ -43,39 +43,42 @@
 
     <!-- modal -->
     <%-include('partials/Modal') %> 
-    <div class="d-flex overflow-auto gap-4 justify-content-between">
-        
-        <div class="d-flex  table-container" style="width:100%;" > 
+    <div class="row">
+        <section class="col-lg-8 connectedSortable ui-sortable" style="margin-bottom: 1.5em;">
+        <div>
+            <div class="d-flex  table-container table-responsive" > 
+                
             
-           
-            <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
-                <thead>
-                    <tr>
-                        <th>Fund Cluster</th>
-                        <th>Project Name</th>
-                        <th>Program Name</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% Object.values(data.result).forEach(ptype =>{%> 
+                <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
+                    <thead>
                         <tr>
-                            <td><%=ptype.fund_cluster%></td>
-                            <td><%=ptype.project_name%></td>
-                            <td><%=ptype.program_name%></td>
-                            <td>
-                                <a id="aEdit" href="#" data-toggle="modal" data-target="#modal" onclick="editModal('<%=ptype._id%>','<%=ptype.project_name%>', 'fund_cluster project_name program_name', `<%=include('partials/bodies/payrollGroup-editbody', {ptype})%>`)"> Edit </a>
-                                <a id="aDelete" href="#" data-toggle="modal" data-target="#modal" onclick="deleteModal('<%=ptype._id%>')"> Delete </a>
-                            </td>
+                            <th>Fund Cluster</th>
+                            <th>Project Name</th>
+                            <th>Program Name</th>
+                            <th>Actions</th>
                         </tr>
-                    <%}); %>
-                </tbody>
-                <tfoot>
-                </tfoot>
-            </table>
+                    </thead>
+                    <tbody>
+                        <% Object.values(data.result).forEach(ptype =>{%> 
+                            <tr>
+                                <td><%=ptype.fund_cluster%></td>
+                                <td><%=ptype.project_name%></td>
+                                <td><%=ptype.program_name%></td>
+                                <td>
+                                    <a id="aEdit" href="#" data-toggle="modal" data-target="#modal" onclick="editModal('<%=ptype._id%>','<%=ptype.project_name%>', 'fund_cluster project_name program_name', `<%=include('partials/bodies/payrollGroup-editbody', {ptype})%>`)"> Edit </a>
+                                    <a id="aDelete" href="#" data-toggle="modal" data-target="#modal" onclick="deleteModal('<%=ptype._id%>')"> Delete </a>
+                                </td>
+                            </tr>
+                        <%}); %>
+                    </tbody>
+                    <tfoot>
+                    </tfoot>
+                </table>
+            </div>
         </div>
-        <div class="sideContainer rounded-1">
-            <div class="overflow-auto" > 
+        </section>
+        <section class="col-lg-4 connectedSortable ui-sortable">
+            <div class="overflow-auto  sideContainer rounded-1" > 
                 <form action="" id="asideForm" class="d-flex flex-column gap-2">
                     <h1>Add Payroll Type</h1>
                     <div class="mb-0">
@@ -94,12 +97,9 @@
                     <button type="submit" class="btn btn-primary sideContainerButton">Add New</button>
                 </form>
             </div>
-        </div>
+    </section>
         
     </div>
-    
-
-
 
 </main>
 
