--- a/views/travelPass.ejs
+++ b/views/travelPass.ejs
@@ -16,7 +16,7 @@
     })%>
 
     <div class="d-flex gap-4"> 
-      <div class="d-flex justify-content-between flex-fill rounded-1 shadow" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Passes</p>
               <p style="font-size:1.5rem;"><b>30</b></p>
@@ -26,7 +26,7 @@
               <p class="mt-auto p-2 bd-highlight">Totals</p>
            </div>
       </div>
-      <div class="d-flex justify-content-between flex-fill rounded-1 shadow" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Upcoming Passes</p>
               <p style="font-size:1.5rem;"><b>30</b></p>
@@ -45,75 +45,77 @@
             }
         },
     })%>
-    <div id='dataTableParent'class="d-flex overflow-auto gap-4 justify-content-between">
-
-        <div class="overflow-auto  table-container" style="width:100%;  "> 
-        
-            <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
-                <thead>
-                    <tr>
-                        <th>Employee ID</th>
-                        <th>Employee</th>
-                        <th>Type of</th>
-                        <th>From</th>
-                        <th>To</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% Object.values(data.result).forEach(pass =>{%> 
-                        <tr>
-                            <td><%=pass.emp_code%></td>
-                            <td><%=pass.name%></td>
-                            <td><%=pass.project%></td>
-                            <td><%=moment(pass.from_date).format('LL')%></td>
-                            <td><%=moment(pass.to_date).format('LL')%></td>
-                            <td>
-                                <a id='aEdit'href="#" data-toggle="modal" data-target="#modal" onclick="editModal('<%=pass._id%>','<%=pass.name%>', '_id id name fromDate toDate project', `<%=include('partials/bodies/Travelpass-editbody', {pass})%>`)"> Edit </a>
-                                <a id='aDelete' href="#" data-toggle="modal" data-target="#modal"  onclick="deleteModal('<%=pass._id%>')"> Delete </a>
-                            </td>
-                        </tr>
-                    <%}); %>
-                    
-                </tbody>
-                <tfoot>
-                </tfoot>
-            </table>
-        </div>
-        <div class="sideContainer rounded-1 shadow">
-            <div class="overflow-auto" > 
-                <form id="asideForm" action="" class="d-flex flex-column gap-2">
-                    <h1>Add Travel Pass</h1>
-                    <div class="mb-0 d-flex flex-column">
-                        <input  type="text" class="form-control" name='id' placeholder="Employee ID *" id='idNo' >
-                        <a href="#" id="idNoFind" onclick="doneTyping()" style="align-self:flex-end;">Find</a>
-                        <p class="text-center text-danger id-error error"></p>
-                    </div>
-                    
-                    <div class="mb-0">
-                        <input  type="text" class="form-control" name='name' placeholder="Employee Name *" id='empName'>
-                        <p class="text-center text-danger name-error error"></p>
-                    </div>
-                    <select class="custom-select" name="project" id="projectSelect">
-                        <option >Project Type</option>
-                        <option value="O.B" selected>Official Business</option>
-                        <option value="T.O">Travel Order</option>
-                    </select>
-                    <div class="mb-0">
-                        <input  type="date" name="fromDate" value="" id="" class="sideContainerDate">
-                        <p class="text-center text-danger from-error error"></p>
-                    </div>
-                    <div class="mb-0">
-                        <input  type="date" name="toDate" value="" id="" class=" sideContainerDate">
-                        <p class="text-center text-danger to-error error"></p>
-                    </div>
-                    <button type="submit" class="btn btn-primary sideContainerButton">Add New</button>
-                </form>
+    <div class="row">
+        <section class="col-lg-8 connectedSortable ui-sortable" style="margin-bottom: 1.5em;">
+            <div>
+                <div class="overflow-auto  table-container table-responsive" > 
+                
+                    <table id="mainTable" class="table border-top border-bottom" style="width: 100%;">
+                        <thead>
+                            <tr>
+                                <th>Employee ID</th>
+                                <th>Employee</th>
+                                <th>Type of</th>
+                                <th>From</th>
+                                <th>To</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% Object.values(data.result).forEach(pass =>{%> 
+                                <tr>
+                                    <td><%=pass.emp_code%></td>
+                                    <td><%=pass.name%></td>
+                                    <td><%=pass.project%></td>
+                                    <td><%=moment(pass.from_date).format('LL')%></td>
+                                    <td><%=moment(pass.to_date).format('LL')%></td>
+                                    <td>
+                                        <a id='aEdit'href="#" data-toggle="modal" data-target="#modal" onclick="editModal('<%=pass._id%>','<%=pass.name%>', '_id id name fromDate toDate project', `<%=include('partials/bodies/Travelpass-editbody', {pass})%>`)"> Edit </a>
+                                        <a id='aDelete' href="#" data-toggle="modal" data-target="#modal"  onclick="deleteModal('<%=pass._id%>')"> Delete </a>
+                                    </td>
+                                </tr>
+                            <%}); %>
+                            
+                        </tbody>
+                        <tfoot>
+                        </tfoot>
+                    </table>
+                </div>
             </div>
-        </div>
-        
+        </section>
+        <section class="col-lg-4 connectedSortable ui-sortable">
+                <div class="overflow-auto sideContainer rounded-1" > 
+                    <form id="asideForm" action="" class="d-flex flex-column gap-2">
+                        <h1>Add Travel Pass</h1>
+                        <div class="mb-0 d-flex flex-column">
+                            <input  type="text" class="form-control" name='id' placeholder="Employee ID *" id='idNo' >
+                            <a href="#" id="idNoFind" onclick="doneTyping()" style="align-self:flex-end;">Find</a>
+                            <p class="text-center text-danger id-error error"></p>
+                        </div>
+                        
+                        <div class="mb-0">
+                            <input  type="text" class="form-control" name='name' placeholder="Employee Name *" id='empName'>
+                            <p class="text-center text-danger name-error error"></p>
+                        </div>
+                        <select class="custom-select" name="project" id="projectSelect">
+                            <option >Project Type</option>
+                            <option value="O.B" selected>Official Business</option>
+                            <option value="T.O">Travel Order</option>
+                        </select>
+                        <div class="mb-0">
+                            <input  type="date" name="fromDate" value="" id="" class="sideContainerDate">
+                            <p class="text-center text-danger from-error error"></p>
+                        </div>
+                        <div class="mb-0">
+                            <input  type="date" name="toDate" value="" id="" class=" sideContainerDate">
+                            <p class="text-center text-danger to-error error"></p>
+                        </div>
+                        <button type="submit" class="btn btn-primary sideContainerButton">Add New</button>
+                    </form>
+                </div>
+            
+        </section>
     </div>
-</div>
 
 
 
