--- a/views/Payslip.ejs
+++ b/views/Payslip.ejs
@@ -23,38 +23,74 @@
         },
     })%>
 
-    <div class="d-flex gap-4 "> 
-        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-            <div class="d-flex flex-column justify-content-around">
-               <p>Payslips  </p>
-               <p style="font-size:1.5rem;"><b><%=(data.summaryData[0]) ? data.summaryData[0].total_payroll : 0.00 %></b></p>
+    <div>
+      <section id="minimal-statistics">
+          <div class="row">
+            <div class="col-12">
+              <h4 class="text-uppercase">Monitor Payslip  </h4>
+              <p>Payslip Summary, Tools, and Redirects</p>
             </div>
-            <div class="d-flex">
-               <p></p>
-               <p class="mt-auto p-2 bd-highlight">Totals</p>
-            </div>
-       </div>
-       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-            <div class="d-flex flex-column justify-content-around">
-               <p>Gross Amount Earned</p>
-               <p style="font-size:1.5rem;"><b>₱<%=(data.summaryData[0]) ? data.summaryData[0].total_grosspay : 0.00 %></b></p>
-            </div>
-            <div class="d-flex">
-               <p></p>
-               <p class="mt-auto p-2 bd-highlight">Totals</p>
-            </div>
-       </div>
-       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-            <div class="d-flex flex-column justify-content-around">
-               <p>Net Amount Due</p>
-               <p style="font-size:1.5rem;"><b>₱<%=(data.summaryData[0]) ? data.summaryData[0].total_netpay : 0.00 %></b></p>
-            </div>
-            <div class="d-flex">
-               <p></p>
-               <p class="mt-auto p-2 bd-highlight">Totals</p>
-            </div>
-       </div>
-  </div> 
+          </div>
+          <div class="d-flex flex-column">
+              <div class="row card-con">
+                  <div class="col-xl-4 col-lg-6" style="gap: 1.5em;">
+                  <div class="card card-stats mb-xl-0">
+                      <div class="card-body">
+                      <div class="row">
+                          <div class="col">
+                          <h5 class="card-title text-uppercase text-muted mb-0">Total Payslips</h5>
+                          <span class="h2 font-weight-bold mb-0"><%=(data.summaryData.length) ? (data.summaryData[0].total_payroll) ? data.summaryData[0].total_payroll : 0 : 0 %></span>
+                          </div>
+                          <div class="col-auto">
+
+                          </div>
+                      </div>
+                      <p class="mt-3 mb-0 text-muted text-sm">
+                          <a href="/admin/payroll/all"><span class="text-nowrap">View Details</span></a>
+                      </p>
+                      </div>
+                  </div>
+                  </div>
+                  <div class="col-xl-4 col-lg-6" style="gap: 1.5em;">
+                      <div class="card card-stats mb-xl-0">
+                      <div class="card-body">
+                          <div class="row">
+                          <div class="col">
+                              <h5 class="card-title text-uppercase text-muted mb-0">Gross Amount Earned</h5>
+                              <span class="h2 font-weight-bold mb-0">₱<%=(data.summaryData.length) ? (data.summaryData[0].total_grosspay) ? data.summaryData[0].total_grosspay : 0 : 0 %></span>
+                          </div>
+                          <div class="col-auto">
+  
+                          </div>
+                          </div>
+                          <p class="mt-3 mb-0 text-muted text-sm">
+                          <a href="/admin/payroll/all"><span class="text-nowrap">View Details</span></a>
+                          </p>
+                      </div>
+                      </div>
+                  </div>
+                  <div class="col-xl-4 col-lg-6" style="gap: 1.5em;">
+                      <div class="card card-stats mb-xl-0">
+                      <div class="card-body">
+                          <div class="row">
+                          <div class="col">
+                              <h5 class="card-title text-uppercase text-muted mb-0">Net Amount Due</h5>
+                              <span class="h2 font-weight-bold mb-0">₱<%=(data.summaryData.length) ? (data.summaryData[0].total_netpay) ? data.summaryData[0].total_netpay :0 : 0 %></span>
+                          </div>
+                          <div class="col-auto">
+  
+                          </div>
+                          </div>
+                          <p class="mt-3 mb-0 text-muted text-sm">
+                          <a href="/admin/payroll/all"><span class="text-nowrap">View Details</span></a>
+                          </p>
+                      </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+    </div>
     <%-include('partials/Modal') %> 
     <div class="d-flex filterContainer rounded-1 gap-3">
         <form action="">
