--- a/views/attendancePerEmployee.ejs
+++ b/views/attendancePerEmployee.ejs
@@ -22,8 +22,8 @@
       <section id="minimal-statistics">
           <div class="row">
             <div class="col-12">
-              <h4 class="text-uppercase">MANAGE EMPLOYEE</h4>
-              <p>Employee Summary, Tools, and Redirects</p>
+              <h4 class="text-uppercase">Manage Attendance</h4>
+              <p>Attendance Summary, Tools, and Redirects</p>
             </div>
           </div>
           <div class="d-flex flex-column">
@@ -41,7 +41,7 @@
                       </div>
                     </div>
                     <p class="mt-3 mb-0 text-muted text-sm">
-                      <a href="/admin/employees"><span class="text-nowrap">View Details</span></a>
+                      <a href="/admin/attendance/history/print/per-employee"><span class="text-nowrap">View Details</span></a>
                     </p>
                   </div>
                 </div>
