--- a/views/deductions.ejs
+++ b/views/deductions.ejs
@@ -14,50 +14,37 @@
             }
         },
     })%>    
-    <div class="d-flex justify-content-between"> 
-            <div class="d-flex justify-content-center align-items-center rounded-1"> 
-              <a href="#" class="nav-link" style="padding-right: 10px !important;">
-                  Home 
-              </a>
-              <p style="padding-right: 10px !important; margin: 0;"> > </p>
-              <a href="#" class="nav-link ">
-                  <b> Deductions </b>
-              </a>
-            </div>
-            <div class="d-flex justify-content-around rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; width: 15%; padding: 5px;"> 
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Aug 15 2022</b></p>
-                    <p style="margin: 0 !important;"><b>11:29 AM</b></p>
-                  </div>
-                  <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p style="margin: 0 !important;"><b>Friday</b></p>
-                    <p><b></b></p>
-                  </div>
-            </div>
-    </div>
+    <section id="minimal-statistics">
+        <div class="row">
+          <div class="col-12">
+            <h4 class="text-uppercase">Deduction</h4>
+            <p>Deduction Tools, Summary, and Redirects</p>
+          </div>
+        </div>
+        <div class="d-flex flex-column">
+          <div class="row">
+            <div class="col-xl-12" style="gap: 1.5em;">
+              <div class="card card-stats mb-xl-0">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col">
+                      <h5 class="card-title text-uppercase text-muted mb-0">Total Deduction</h5>
+                      <span class="h2 font-weight-bold mb-0"><%=(data.summaryData) ? data.summaryData.total_deduction : 0%></span>
+                    </div>
+                    <div class="col-auto">
 
-    <div class="d-flex gap-4"> 
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-           <div class="d-flex flex-column justify-content-around">
-              <p>Deductions</p>
-              <p style="font-size:1.5rem;"><b>30</b></p>
-           </div>
-           <div class="d-flex">
-              <p></p>
-              <p class="mt-auto p-2 bd-highlight">Totals</p>
-           </div>
-      </div>
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-        <div class="d-flex flex-column justify-content-around">
-           <p>Amount</p>
-           <p style="font-size:1.5rem;"><b>P30</b></p>
+                    </div>
+                  </div>
+                  <p class="mt-3 mb-0 text-muted text-sm">
+                    <a href="/admin/deductions"><span class="text-nowrap">View Details</span></a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
-        <div class="d-flex">
-           <p></p>
-           <p class="mt-auto p-2 bd-highlight">Totals</p>
-        </div>
-   </div>
-    </div>
+    </section>
     <%-include('partials/Modal') %> 
     <%-include('partials/navBar.ejs', {data:{
             deductions: {
