--- a/views/partials/infoBox.ejs
+++ b/views/partials/infoBox.ejs
@@ -6,8 +6,8 @@
    <section id="minimal-statistics">
        <div class="row">
          <div class="col-12">
-           <h4 class="text-uppercase">MANAGE EMPLOYEE</h4>
-           <p>Employee Summary, Tools, and Redirects</p>
+           <h4 class="text-uppercase">Manage Attendance</h4>
+           <p>Attendance Summary, Tools, and Redirects</p>
          </div>
        </div>
        <div class="d-flex flex-column">
@@ -43,7 +43,7 @@
                      </div>
                    </div>
                    <p class="mt-3 mb-0 text-muted text-sm">
-                     <a href="/admin/employees"><span class="text-nowrap">View Details</span></a>
+                     <a href="/admin/attendance/all"><span class="text-nowrap">View Details</span></a>
                    </p>
                  </div>
                </div>
@@ -61,7 +61,7 @@
                      </div>
                    </div>
                    <p class="mt-3 mb-0 text-muted text-sm">
-                     <a href="/admin/employees"><span class="text-nowrap">View Details</span></a>
+                     <a href="/admin/attendance/all"><span class="text-nowrap">View Details</span></a>
                    </p>
                  </div>
                </div>
@@ -79,7 +79,7 @@
                      </div>
                    </div>
                    <p class="mt-3 mb-0 text-muted text-sm">
-                     <a href="/admin/employees"><span class="text-nowrap">View Details</span></a>
+                     <a href="/admin/attendance/all"><span class="text-nowrap">View Details</span></a>
                    </p>
                  </div>
                </div>
@@ -97,7 +97,7 @@
                      </div>
                    </div>
                    <p class="mt-3 mb-0 text-muted text-sm">
-                     <a href="/admin/employees"><span class="text-nowrap">View Details</span></a>
+                     <a href="/admin/attendance/all"><span class="text-nowrap">View Details</span></a>
                    </p>
                  </div>
                </div>
@@ -115,7 +115,7 @@
                      </div>
                    </div>
                    <p class="mt-3 mb-0 text-muted text-sm">
-                     <a href="/admin/employees"><span class="text-nowrap">View Details</span></a>
+                     <a href="/admin/attendance/all"><span class="text-nowrap">View Details</span></a>
                    </p>
                  </div>
                </div>
