--- a/views/payrollGroups.ejs
+++ b/views/payrollGroups.ejs
@@ -21,18 +21,38 @@
             } 
         },
     })%>
-    <div class="d-flex gap-4 "> 
-     <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-          <div class="d-flex flex-column justify-content-around">
-             <p>Payroll Groups</p>
-             <p style="font-size:1.5rem;"><b><%=(data.result) ? data.result.length : 0 %></b></p>
+    <section id="minimal-statistics">
+        <div class="row">
+          <div class="col-12">
+            <h4 class="text-uppercase">Manage Payroll</h4>
+            <p>Payroll Group Summary, Tools, and Redirects</p>
           </div>
-          <div class="d-flex">
-             <p></p>
-             <p class="mt-auto p-2 bd-highlight">Totals</p>
+        </div>
+        <div class="d-flex flex-column">
+          <div class="row">
+            <div class="col-xl-12" style="gap: 1.5em;">
+              <div class="card card-stats mb-xl-0">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col">
+                      <h5 class="card-title text-uppercase text-muted mb-0">Total Payroll Group</h5>
+                      <span class="h2 font-weight-bold mb-0"><%=(data.result) ? data.result.length : 0 %></span>
+                    </div>
+                    <div class="col-auto">
+
+                    </div>
+                  </div>
+                  <p class="mt-3 mb-0 text-muted text-sm">
+                    <a href="/admin/payroll/groups"><span class="text-nowrap">View Details</span></a>
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
-     </div>
-      </div>
+
+        </div>
+    </section>
+   
     <%-include('partials/navBar.ejs', {data:{
         payroll: {
             url: '/admin/payroll/groups',
