--- a/views/payrollHistory.ejs
+++ b/views/payrollHistory.ejs
@@ -24,7 +24,7 @@
       <section id="minimal-statistics">
         <div class="row">
           <div class="col-12">
-            <h4 class="text-uppercase">Payroll Periods</h4>
+            <h4 class="text-uppercase">Manage Payroll</h4>
             <p>Payroll Summary and Redirects</p>
           </div>
         </div>
@@ -42,7 +42,7 @@
     
                     </div>
                     <p class="mt-3 mb-0 text-sm">
-                      <a href="/admin/payroll/groups"><span class="text-nowrap">View Details</span></a>
+                      <a href="/admin/payroll/history/all"><span class="text-nowrap">View Details</span></a>
                     </p>
                   </div>
                 </div>
